Criando a estrutura base e adicionando css

--- a/mercearia/src/app/home/home.component.html
+++ b/mercearia/src/app/home/home.component.html
@@ -2,6 +2,7 @@
     <form>
         <input type="text" placeholder="Filtrar por nome">
         <button class="primary" type="button">Buscar</button>
+        <!-- <app-housing-location></app-housing-location>  -->
     </form>
 </section>
 <section class="results">
