--- a/mercearia/src/app/app.component.html
+++ b/mercearia/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1>teste</h1>
-<app-home></app-home>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+
+<!--Conteúdo da página-->
+<main>
+    <section class="content">
+        <app-home></app-home>
+    </section>
+</main>
+
+<app-footer></app-footer>
