--- a/mercearia/src/app/app.component.html
+++ b/mercearia/src/app/app.component.html
@@ -1,11 +1,12 @@
 <app-header></app-header>
-<app-sidebar></app-sidebar>
+<button type="button" class="btn btn-danger">Danger</button>
 
-<!--Conteúdo da página-->
+<!-- <app-sidebar></app-sidebar>
+
 <main>
     <section class="content">
         <app-home></app-home>
     </section>
 </main>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
