Adicionando novos componentes

--- a/mercearia/src/app/header/header.component.html
+++ b/mercearia/src/app/header/header.component.html
@@ -1,25 +1,11 @@
 <div class="mercearia--header">
     <div class="mercearia-logo">
-        <!-- Inserir imagem aqui -->
-        logo
+        Logo
     </div>
     <div class="mercearia--header--nav">
-        <div class="mercearia--top--bar">
-            <a href="#">Produto</a>
-            <a href="#">Categoria</a>
-            <a href="#">Marca</a>
-            <a href="#">Cliente</a>
-            <a href="#">Fornecedor</a>
-        </div>
+        <top-menu></top-menu>
         <div class="mercearia--bottom--bar">
-            <a href="#">Home</a>
-            <a href="#">Contato</a>
-        </div>
-        <div class="mercearia--search-bar">
-            <input type="text" class="mercearia--serarch-box" placeholder="Buscar">
-            <button>
-                <i class="mercearia--search--btn">Buscar</i>
-            </button>
+            <main-menu></main-menu>
         </div>
     </div>
 </div>
