Aula 18: https://www.youtube.com/watch?v=THrWqRi2usg&list=PL1BztTYDF-QNlGo5-g65Xj1mINHYk_FM9&index=18

--- a/mercearia/src/app/product-list/product-list.component.html
+++ b/mercearia/src/app/product-list/product-list.component.html
@@ -1,1 +1,14 @@
-<p>product-list works!</p>
+
+<div class="mercearia--product--container">
+    <app-buscar></app-buscar>
+    <!-- <img src="/assets/images/{{ produto.codigoBarra + '.jpg' }}" width="200px">
+    <p>Nome: {{ produto.nome }}</p>
+    <p>Preço: {{ 'R$' + produto.preco }}</p>
+    <p>Cor: {{ produto.cor }}</p>
+    <p>Preço com desconto: {{ getPrecoComDesconto().toFixed(2) }}</p>
+    <p>Estoque: {{ produto.estoque > 0 ? 'Em estoque': 'Sem estoque' }}</p>
+   
+    <button (click)="ajustarCarrinho(-1)">-</button>
+    <span>{{ adicionarAoCarrinho }}</span>
+    <button (click)="ajustarCarrinho(+1)">+</button> -->
+</div>
