Utilizando o ngFor para mostrar os itens do mainMenu

--- a/mercearia/src/app/header/main-menu/main-menu.component.html
+++ b/mercearia/src/app/header/main-menu/main-menu.component.html
@@ -1,4 +1,3 @@
 <div class="mercearia-menu">
-    <a href="#">Home</a>
-    <a href="#">Contato</a>
+    <a *ngFor="let menuItem of mainMenuList" href="#">{{menuItem}}</a>
 </div>
