--- a/mercearia/src/app/product-list/product-list.component.html
+++ b/mercearia/src/app/product-list/product-list.component.html
@@ -1,6 +1,9 @@
 
 <div class="mercearia--product--container">
     <app-buscar></app-buscar>
+    <!-- <div *ngFor="let item of produtoList">
+        <p>O produto atual é: {{item}}</p>
+    </div> -->
     <!-- <div *ngFor="let item of {{produto.stringList}}">
         <p>O produto atual é: {{ item }}</p>
     </div> -->
