Renomeado o component ProductList para Container

--- a/mercearia/src/app/app.component.html
+++ b/mercearia/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<product-list></product-list>
+<app-container></app-container>
 <!-- <app-sidebar></app-sidebar>
 
 <main>
