Usando ngIf e montando a exposição de produtos

--- a/mercearia/src/app/container/container.component.html
+++ b/mercearia/src/app/container/container.component.html
@@ -1,6 +1,7 @@
 
 <div class="mercearia--product--container">
     <app-buscar></app-buscar>
+    <produto-list></produto-list>
     <!-- <div *ngFor="let item of produtoList">
         <p>O produto atual é: {{item}}</p>
     </div> -->
