--- a/mercearia/src/app/container/buscar/buscar.component.html
+++ b/mercearia/src/app/container/buscar/buscar.component.html
@@ -2,4 +2,4 @@
     <input class="mercearia-buscar-produto-input" [value]="textoPesquisa" [(ngModel)]="textoPesquisa">
     <button class="btn btn-buscar">Buscar</button>
 </div>
-<div class="mercearia-resultado-busca-por"><p><strong>Resultado de busca por:</strong> {{textoPesquisa}}</p></div>
+<div class="mercearia-resultado-busca-por"><p *ngIf="textoPesquisa !=''"><strong>Resultado de busca por:</strong> {{textoPesquisa}}</p></div>
