--- a/mercearia/src/app/container/container.component.css
+++ b/mercearia/src/app/container/container.component.css
@@ -1,5 +1,8 @@
 .mercearia--product--container{
-    padding: 10px 30px;
+    margin: 20px auto;
+    display:flex;
+    flex-wrap: wrap;
+    padding: 0px 17vh;
 }
 
 button{
