--- a/mercearia/src/app/container/produto-list/produto-list.component.html
+++ b/mercearia/src/app/container/produto-list/produto-list.component.html
@@ -3,7 +3,7 @@
         <div class="mercearia--add--to--wishlist">
             <i class="fa fa-heart-o" aria-hidden="true"></i>
         </div>
-        <!-- <div class="mercearia-on-sale-tag">75% OFF</div> -->
+        <div class="mercearia-on-sale-tag" *ngIf="prod.percentualDesconto">75% OFF</div>
         <div class="mercearia-product-image">
             <img [src]="prod.imagemURL" class="mercearia-product-image">
         </div>
