--- a/mercearia/src/app/container/produto-list/produto-list.component.css
+++ b/mercearia/src/app/container/produto-list/produto-list.component.css
@@ -49,7 +49,7 @@
     color:white;
 }
 
-.mercearia--product--image{
+.mercearia-product-image{
     width: 260px;
     height: 250px;
 }
@@ -59,6 +59,7 @@
     margin-top: 7px;
 }
 .mercearia--product--category,
+.mercearia--product--in--stock,
 .mercearia--product--available-colors{
     font-size: 12px;
     color: #999;
