--- a/mercearia/src/app/container/produto-list/produto-list.component.html
+++ b/mercearia/src/app/container/produto-list/produto-list.component.html
@@ -1,20 +1,3 @@
 <div class="mercearia--product--container">
-    <div class="mercearia--product--item" *ngFor="let prod of produtoList">
-        <div class="mercearia--add--to--wishlist">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </div>
-        <div class="mercearia-on-sale-tag" *ngIf="prod.percentualDesconto">75% OFF</div>
-        <div class="mercearia-product-image">
-            <img [src]="prod.imagemURL" class="mercearia-product-image">
-        </div>
-        <div class="mercearia--add--to--price">
-            {{prod.preco}}
-        </div>
-        <div class="mercearia--product--name">{{prod.nome}}</div>
-        <div class="mercearia--product--category">{{prod.descricao}}, {{prod.categoria}}, {{prod.marca}}</div>
-        <div class="mercearia--product--available-colors">{{prod.cores.length}} cores disponívels</div>
-        <div class="mercearia--product--in--stock" [ngStyle]="{fontWeight: 'bold', color: prod.estoque > 0 ? 'Green': 'Red'}">
-            {{prod.estoque > 0? 'Em estoque': 'Sem estoque'}}
-        </div>
-    </div>
+    <app-produto *ngFor="let prod of produtoList" [produto]="prod"></app-produto>
 </div>
