Utilizando input radio, contando e faendo filtros em uma lista de objetos

--- a/mercearia/src/app/container/produto-list/produto-list.component.html
+++ b/mercearia/src/app/container/produto-list/produto-list.component.html
@@ -1,3 +1,4 @@
+<app-filtro [todos]="totalProdutos" [comEstoque]="totalComEstoque" [semEstoque]="totalSemEstoque"></app-filtro>
 <div class="mercearia--product--container">
     <app-produto *ngFor="let prod of produtoList" [produto]="prod"></app-produto>
 </div>
